# bigone

./: AGENTS.md  BUILD_WINDOWS_WITHOUT_INSTALL.md  CMakeLists.txt  README.md
.github/workflows/: build-windows-vst3.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
